--- a/06. Thinking In React/usePopcorn_app/src/index.css
+++ b/06. Thinking In React/usePopcorn_app/src/index.css
@@ -18,6 +18,7 @@
 
 html {
   font-size: 62.5%;
+  overflow-y: auto;
 }
 
 body {
@@ -27,6 +28,9 @@ body {
   color: var(--color-text);
   background-color: var(--color-background-900);
   padding: 2.4rem;
+
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 /* ******* */
@@ -54,7 +58,7 @@ body {
   max-width: 42rem;
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
-  /* overflow: scroll; */
+  overflow: scroll;
   position: relative;
 }
 
@@ -389,4 +393,8 @@ EMPTY STAR
   display: flex;
   width: 2rem;
   align-items: center;
+}
+
+.star-count h2 {
+  all: unset;
 }
