--- a/11. React Router/worldWise_app/src/index.css
+++ b/11. React Router/worldWise_app/src/index.css
@@ -81,7 +81,7 @@ input:focus {
   margin: 2rem;
 
   max-width: 100%;
-  height: 70rem;
+  height: 100vh;
 
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url("../../public/assets/bg.jpg");
