--- a/11. React Router/worldWise_app/src/pages/Homepage.module.css
+++ b/11. React Router/worldWise_app/src/pages/Homepage.module.css
@@ -1,9 +1,25 @@
-.main {
+.homepage {
   margin: 0 auto;
-  width: 50rem;
+  width: 60rem;
+  height: 100vh;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  gap: 2rem;
+}
+
+.homepage h1 {
+  font-size: 4.5rem;
+
+  text-align: center;
+}
+
+.homepage h3 {
+  font-size: 1.5rem;
+  text-align: center;
+
+  color: var(--color-light--1);
 }
