--- a/15. React Router - Data Loading/fast_pizza_app/src/index.css
+++ b/15. React Router - Data Loading/fast_pizza_app/src/index.css
@@ -1,6 +1,6 @@
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #f7f7f7;
   color: #444;
 }
@@ -13,26 +13,34 @@ body {
 }
 
 /* https://dev.to/afif/i-made-100-css-loaders-for-your-next-project-4eje */
-.loader {
-  width: 45px;
-  aspect-ratio: 0.75;
-  --c: no-repeat linear-gradient(#333 0 0);
-  background: var(--c) 0% 50%, var(--c) 50% 50%, var(--c) 100% 50%;
-  background-size: 20% 50%;
-  animation: loading 1s infinite linear;
+.spinner {
+  width: 15px;
+  aspect-ratio: 1;
+  position: relative;
 }
-
-@keyframes loading {
-  20% {
-    background-position: 0% 0%, 50% 50%, 100% 50%;
+.spinner::before,
+.spinner::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 50%;
+  background: #000;
+}
+.spinner::before {
+  box-shadow: -26px 0;
+  animation: d10-1 1.5s infinite linear;
+}
+.spinner::after {
+  transform: rotate(0deg) translateX(26px);
+  animation: d10-2 1.5s infinite linear;
+}
+@keyframes d10-1 {
+  50% {
+    transform: translateX(26px);
   }
-  40% {
-    background-position: 0% 100%, 50% 0%, 100% 50%;
-  }
-  60% {
-    background-position: 0% 50%, 50% 100%, 100% 0%;
-  }
-  80% {
-    background-position: 0% 50%, 50% 50%, 100% 100%;
+}
+@keyframes d10-2 {
+  100% {
+    transform: rotate(-360deg) translateX(26px);
   }
 }
