--- a/15. React Router - Data Loading/fast_pizza_app/src/index.css
+++ b/15. React Router - Data Loading/fast_pizza_app/src/index.css
@@ -2,6 +2,46 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .input {
+    @apply mb-2 w-full rounded-full border border-stone-200 px-4 py-2;
+  }
+
+  /* https://dev.to/afif/i-made-100-css-loaders-for-your-next-project-4eje */
+  .spinner {
+    width: 15px;
+    aspect-ratio: 1;
+    position: relative;
+  }
+  .spinner::before,
+  .spinner::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 50%;
+  }
+  .spinner::before {
+    box-shadow: -26px 0;
+    animation: d10-1 1.5s infinite linear;
+    background: theme(colors.red.600);
+  }
+  .spinner::after {
+    transform: rotate(0deg) translateX(26px);
+    animation: d10-2 1.5s infinite linear;
+    background: theme(colors.green.600);
+  }
+  @keyframes d10-1 {
+    50% {
+      transform: translateX(26px);
+    }
+  }
+  @keyframes d10-2 {
+    100% {
+      transform: rotate(-360deg) translateX(26px);
+    }
+  }
+}
+
 /* body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -15,36 +55,3 @@
   gap: 32px;
   height: 100dvh;
 } */
-
-/* https://dev.to/afif/i-made-100-css-loaders-for-your-next-project-4eje */
-.spinner {
-  width: 15px;
-  aspect-ratio: 1;
-  position: relative;
-}
-.spinner::before,
-.spinner::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  border-radius: 50%;
-  background: #000;
-}
-.spinner::before {
-  box-shadow: -26px 0;
-  animation: d10-1 1.5s infinite linear;
-}
-.spinner::after {
-  transform: rotate(0deg) translateX(26px);
-  animation: d10-2 1.5s infinite linear;
-}
-@keyframes d10-1 {
-  50% {
-    transform: translateX(26px);
-  }
-}
-@keyframes d10-2 {
-  100% {
-    transform: rotate(-360deg) translateX(26px);
-  }
-}
